# LedControl

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  presets.txt
cad/: control.scad
generator/: CMakeLists.txt  colorTemperature.hpp  main.cpp
pcb/: local.kicad_sym
pcb/g431/: control.ioc
pcb/g431Triple/: control.kicad_pcb  control.kicad_pro  control.kicad_sch  interface.kicad_sch
pcb/local.pretty/: 0402.kicad_mod  0402.step  0402.wrl  0603.kicad_mod  0603.step  0603D.kicad_mod  0603D.step  0603D.wrl  0805.kicad_mod  0805.step  0805.wrl  1008.kicad_mod  1008.step  1008.wrl  1206-term.kicad_mod  1206-term.step  1206-term.wrl  1206.kicad_mod  1206.step  1812.kicad_mod  1812.step  1812.wrl  BME680.kicad_mod  BME680.step  BME680.wrl  Connector-Flat-24-0.5mm.kicad_mod  Connector-Flat-24-0.5mm.step  Connector-Flat-24-0.5mm.wrl  Connector-Flat-24_P0.5mm.kicad_mod  Connector-Flat-24_P0.5mm.wrl  FTSH-107-01-L-DV-K.kicad_mod  FTSH-107-01-L-DV-K.wrl  Harting14110413002000.kicad_mod  Harting14110413002000.step  Harting14110413002000.wrl  JSO21.kicad_mod  JSO21.step  JSO21.wrl  Jumper.kicad_mod  PEC12R-4217F-S0024.kicad_mod  (+39 more)
pcb/smt32triple/: control.ioc  control.kicad_pcb  control.kicad_sch  interface.kicad_sch
pcb/stm32/: control.ioc  control.kicad_pcb  control.kicad_pcb_  control.kicad_pro  control.kicad_sch
pcb/stm32triple/: control.ioc  control.kicad_pcb  control.kicad_pro  control.kicad_sch  interface.kicad_sch
src/: CMakeLists.txt  Color.hpp  E12.cpp  E12.hpp  EffectInfo.hpp  EffectManager.cpp  EffectManager.hpp  LedControl.cpp  RemoteControl.cpp  RemoteControl.hpp  Strip.hpp  StripManager.cpp  StripManager.hpp  Test.cpp  Timer.hpp  main.cpp  math.hpp
src/control/: LedControl.hpp  SystemInit.cpp  Test.hpp  config.hpp  debug.cpp  link.ld
src/effects/: Autumn.hpp  Autumn.palette  ColorCycle3.hpp  ColorFade.hpp  ColorFade3.hpp  CylonBounce.hpp  MeteorRain.hpp  RgbFade.hpp  SnowSparkle.hpp  Spring.hpp  Spring.palette  StaticColor.hpp  Strobe.hpp  Summer.hpp  Summer.palette  Tetris.hpp  Winter.hpp  Winter.palette  cos8u10.hpp  lookupAutumnPalette.hpp  lookupSpringPalette.hpp  lookupSummerPalette.hpp  lookupWinterPalette.hpp
src/emu/: Drivers.hpp  LedControl.hpp  Test.hpp  config.hpp
src/g431/: LedControl.hpp  SystemInit.cpp  config.hpp
src/g431Triple/: LedControl.hpp  SystemInit.cpp  config.hpp  debug.cpp  link.ld
test/: CMakeLists.txt  gTest.cpp
